// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hidden if dismissed 1`] = `
<div
  className="AnalyticsNudge"
>
  <span>
    Thanks for opting out! [copy tbd]
  </span>
</div>
`;

exports[`hides nudge if !needsNudge and no state 1`] = `
<div
  className="AnalyticsNudge"
>
  <div>
    <span>
      Congrats on your first Tilt resource 🎉 Opt into analytics? (Read more
       
      <a
        href="https://github.com/windmilleng/tilt#telemetry-and-privacy"
        target="_blank"
      >
        here
      </a>
      .) 
    </span>
    <span
      className="AnalyticsNudge-buttons"
    >
      <button
        onClick={[Function]}
      >
        Yes!
      </button>
      <button
        onClick={[Function]}
      >
        Nope!
      </button>
    </span>
  </div>
</div>
`;

exports[`shows failure message with response body 1`] = `
<div
  className="AnalyticsNudge is-visible"
>
  <div>
    <span>
      Oh no, something went wrong! Request failed with:
      <div
        className="AnalyticsNudge-err"
      >
        <span>
          something is not right! something is quite wrong!
        </span>
      </div>
      <a
        href="https://tilt.dev/contact"
        target="_blank"
      >
        Contact us
      </a>
      . 
    </span>
    <span
      className="AnalyticsNudge-buttons"
    >
      <button
        onClick={[Function]}
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;

exports[`shows nudge if needsNudge 1`] = `
<div
  className="AnalyticsNudge is-visible"
>
  <div>
    <span>
      Congrats on your first Tilt resource 🎉 Opt into analytics? (Read more
       
      <a
        href="https://github.com/windmilleng/tilt#telemetry-and-privacy"
        target="_blank"
      >
        here
      </a>
      .) 
    </span>
    <span
      className="AnalyticsNudge-buttons"
    >
      <button
        onClick={[Function]}
      >
        Yes!
      </button>
      <button
        onClick={[Function]}
      >
        Nope!
      </button>
    </span>
  </div>
</div>
`;

exports[`shows request-in-progress message 1`] = `
<div
  className="AnalyticsNudge is-visible"
>
  <span>
    Okay, we'll inform the robots...
  </span>
</div>
`;

exports[`shows success message: opt in 1`] = `
<div
  className="AnalyticsNudge is-visible"
>
  <span>
    Thanks for opting in! [copy tbd]
  </span>
</div>
`;

exports[`shows success message: opt out 1`] = `
<div
  className="AnalyticsNudge is-visible"
>
  <span>
    Thanks for opting out! [copy tbd]
  </span>
</div>
`;
